[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/chart.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/user_interface.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/main.gd" type="Script" id=3]
[ext_resource path="res://Scenes/protactor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/pencil.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/triangle_ruler.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/compass.tscn" type="PackedScene" id=7]

[node name="main" type="Node"]
script = ExtResource( 3 )

[node name="chart" parent="." instance=ExtResource( 1 )]

[node name="compass" parent="." instance=ExtResource( 7 )]
visible = false

[node name="pencil" parent="." instance=ExtResource( 5 )]
visible = false
size_mm = Vector2( 10, 10 )

[node name="protractor" parent="." instance=ExtResource( 4 )]
visible = false

[node name="triangle_ruler" parent="." instance=ExtResource( 6 )]
visible = false

[node name="options_menu" parent="." instance=ExtResource( 2 )]

[connection signal="option_pressed" from="options_menu" to="." method="_on_options_menu_option_pressed"]
